Fix contact display on mobile devices

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -774,7 +774,7 @@ a.text-white:hover{
 	margin-top:0px;
 }
 .dropdown-menu > li > a:hover{
-	font-size: 120%;
+	font-size: 110%;
 }
 /** navbar border **/
 .navbar{
